--- a/App/src/app/auth/login/login.page.html
+++ b/App/src/app/auth/login/login.page.html
@@ -45,6 +45,7 @@
               </ion-item>
             </ion-col>
           </ion-row>
+       
           <!-- <ion-row class="ion-align-items-center ion-justify-content-center">
             <ion-button
               fill="clear"
@@ -71,6 +72,13 @@
               >Not having an account? Register</ion-button
             >
           </ion-row>
+          <ion-row class="ion-align-items-center ion-justify-content-center">
+            <ion-button
+              fill="clear"
+              (click)="navigateTo('auth/forgot-password')"
+              >Forgot Password?</ion-button
+            >
+          </ion-row> 
         </ion-grid>
     </form>
   </div>
