updated the request and donate form

--- a/App/src/app/auth/profile/profile.page.html
+++ b/App/src/app/auth/profile/profile.page.html
@@ -54,11 +54,11 @@
    
 
   </ion-list>
-  <ion-item class="logo" lines="none">
+  <!-- <ion-item class="logo" lines="none">
     <img class="logo-img" src="../../../assets/bloodLogo.jpg
     " alt="">
  
-  </ion-item>
+  </ion-item> -->
     
 </ion-content>
 
