--- a/App/src/app/layout/pages/tabs/blood-requests/blood-requests.page.html
+++ b/App/src/app/layout/pages/tabs/blood-requests/blood-requests.page.html
@@ -11,7 +11,7 @@
           <ion-title>Blood-Requests</ion-title>
         </ion-col>
         <ion-col size="auto" (click)="refreshData()">
-          <img class="refresh-btn" src="../../../../../assets/refresh.png" alt="">
+          <img class="refresh-btn" src="../../../../../assets/new-refresh.png" alt="">
         </ion-col>
       </ion-row>
     </ion-grid>
