--- a/App/src/app/layout/pages/donate/donate.page.html
+++ b/App/src/app/layout/pages/donate/donate.page.html
@@ -407,8 +407,8 @@
               <ion-modal trigger="open-modal" (willDismiss)="onWillDismiss($event)">
                 <ng-template>
                   <ion-header>
-                    <ion-toolbar>
-                      <ion-title>Terms & Conditions</ion-title>
+                    <ion-toolbar class="ion-justify-content-center ion-padding-start">
+                      <ion-title >Terms & Conditions</ion-title>
                     </ion-toolbar>
                   </ion-header>
                   <ion-content class="ion-padding">
