--- a/App/src/app/shared/models/donation-details/donation-details.component.scss
+++ b/App/src/app/shared/models/donation-details/donation-details.component.scss
@@ -13,3 +13,47 @@ ion-card-title{
 .donor-illness{
     padding-left: 3px;
 }
+
+
+//profile
+
+.overlay-icon {
+    position: absolute;
+    top: 85%;
+    left: 25%;
+    transform: translate(-50%, -50%);
+    font-size: 2rem;
+  }
+  .margin-top {
+    margin-top: 11px;
+  }
+  // .margin-img {
+  //   margin-top: 6rem;
+  // }
+  .edit-btn {
+    width: 100%;
+  }
+  
+  img {
+    text-align: center;
+    margin: auto !important;
+  }
+  .logo{
+      margin-top: 2rem;
+      .logo-img {
+          width: 74%;
+        }
+  }
+  .head{
+    font-weight: bold;
+  }
+  
+  .avatar {
+    margin: auto;
+    width: 8em;
+    height: 8em;
+  }
+  .fontSize {
+    font-size: 1.15rem;
+  }
+  
