--- a/App/src/app/layout/pages/tabs/blood-donations/blood-donations.page.html
+++ b/App/src/app/layout/pages/tabs/blood-donations/blood-donations.page.html
@@ -11,8 +11,96 @@
           <ion-title>Blood Donations</ion-title>
         </ion-col>
         <ion-col>
-          <img class="refresh-btn" src="../../../../../assets/filter.png" alt="filter">
+          <img class="filter-btn" src="../../../../../assets/filter.png" alt="filter" id="open-modal" expand="block">
+          <ion-content class="ion-padding">
+            <p>{{ message }}</p>
+            <ion-modal trigger="open-modal" (willDismiss)="onWillDismiss($event)">
+              <ng-template>
+                <ion-header>
+                  <ion-toolbar color="primary" style="display: flex; justify-content: space-between; align-items: center;">
+                    <ion-title style="flex-grow: 1; text-align: center;">Apply Filter</ion-title>
+                    <ion-buttons slot="end" style="position: absolute; right: 0;">
+                      <ion-button (click)="cancel()">Cancel</ion-button>
+                    </ion-buttons>
+                  </ion-toolbar>                  
+                </ion-header>
+                <ion-content class="ion-padding">
+                  <ion-item>
+                    <ion-grid>
+                      <ion-row class="ion-padding-bottom">
+                        <ion-searchbar></ion-searchbar>
+                      </ion-row>
+                      <ion-row class="ion-padding-bottom">
+                        <ion-label>Blood Group</ion-label>
+                      </ion-row>
+                      <ion-row class="ion-padding-bottom">
+                        <ion-button 
+                          size="small" 
+                          fill="outline" 
+                          *ngFor="let group of bloodGroup" 
+                          [ngClass]="{'selected': selectedBloodGroups.includes(group)}"
+                          (click)="toggleBloodGroup(group)">
+                          {{group}}
+                        </ion-button>
+                      </ion-row>
+                      <ion-row class="ion-padding-bottom">
+                        <ion-label>Blood Type</ion-label>
+                      </ion-row>
+                      <ion-row class="ion-padding-bottom">
+                        <ion-button 
+                          size="small" 
+                          fill="outline" 
+                          *ngFor="let type of bloodType" 
+                          [ngClass]="{'selected': selectedBloodTypes.includes(type)}"
+                          (click)="toggleBloodType(type)">
+                          {{type}}
+                        </ion-button>
+                      </ion-row>
+                      <ion-row class="ion-padding-bottom">
+                        <ion-label>Hospital Name</ion-label>
+                      </ion-row>
+                      <ion-row class="ion-align-items-center ion-justify-content-center ion-padding-bottom">
+                        <ion-col size="12">
+                          <ion-item class="input">
+                            <ion-select 
+                              placeholder="Select Hospital Name"
+                              multiple="true"
+                              (ionChange)="onHospitalChange($event)"
+                              [value]="selectedHospitals">
+                              <ion-select-option *ngFor="let name of hospitalName" [value]="name">{{ name }}</ion-select-option>
+                            </ion-select>
+                          </ion-item>
+                        </ion-col>
+                      </ion-row>
+                    </ion-grid>
+                  </ion-item>
+                </ion-content>
+                <ion-footer>
+                  <ion-toolbar>
+                    <ion-grid>
+                      <ion-row>
+                        <ion-col class="ion-padding ion-text-center">
+                          <ion-button (click)="clearSelections()">
+                            Clear
+                          </ion-button>
+                        </ion-col>
+                        <ion-col class="ion-padding ion-text-center">
+                          <ion-button (click)="confirm()" [strong]="true">
+                            Confirm
+                          </ion-button>
+                        </ion-col>
+                      </ion-row>
+                    </ion-grid>
+                  </ion-toolbar>
+                </ion-footer>
+              </ng-template>
+            </ion-modal>
+          </ion-content>
         </ion-col>
+        
+        
+        
+               
         <ion-col size="auto" (click)="refreshData()">
           <img class="refresh-btn" src="../../../../../assets/new-refresh.png" alt="refresh">
         </ion-col>
