--- a/App/src/app/layout/pages/tabs/blood-donations/blood-donations.page.scss
+++ b/App/src/app/layout/pages/tabs/blood-donations/blood-donations.page.scss
@@ -59,3 +59,15 @@ i{
     font-weight: 600;
   }
 }
+
+
+.selected {
+  background-color: #7e2212; 
+  color: white;
+}
+
+.filter-btn{
+  width: 36px;
+  margin-left: 3rem;
+}
+
